Add Passing Data to Templates

--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main page</title>
+    <title>{{ title }}</title>
 </head>
 <body>
-    <h1>Main Page</h1>
+    <p>{{ menu }}</p>
+    <p>{{ float }}</p>
+    <p>{{ lst }}</p>
+    <p>{{ set }}</p>
+    <p>{{ dict.key1 }}</p>
+    <p>{{ obj.a }}</p>
+    <h1>{{ title }}</h1>
 </body>
 </html>
