--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>{{ main_title|default:"Main" }}</title>
 </head>
 <body>
-    <p>{{ menu }}</p>
-    <p>{{ float }}</p>
-    <p>{{ lst }}</p>
+    <p>{{ menu|join:" | " }}</p>
+    <p>{{ float|add:"100"  }}</p>
+    <p>{{ lst|length }}</p>
     <p>{{ set }}</p>
     <p>{{ dict.key1 }}</p>
     <p>{{ obj.a }}</p>
-    <h1>{{ title }}</h1>
+    <h1>{{ title|upper }}</h1>
 </body>
 </html>
