--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -7,7 +7,18 @@
     <title>{{ main_title|default:"Main" }}</title>
 </head>
 <body>
-   <p>{{ menu|join:' | ' }}</p>
+   <ul>
+    <li><a href="{% url 'home' %}">Home</a></li>
+    {% for m in menu %}
+    {% if not forloop.last %}
+    <li>
+    {% else %}
+    <li class="last">
+    {% endif %}
+    <a href="{% url m.url_name %}">{{ m.title }}</a>
+    </li>
+    {% endfor %}
+   </ul>
    <h1>{{ title|upper}}</h1>
 
    <ul>
@@ -16,6 +27,7 @@
     <li>
         <h2>{{ p.title }}</h2>
         <p>{{ p.content }}</p>
+        <p><a href="{% url 'post' p.id %}">Show post</a></p>
         {% if not forloop.last %}
         <hr>
         {% endif %}
