--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ main_title|default:"Main" }}</title>
-</head>
-<body>
-   <ul>
-    <li><a href="{% url 'home' %}">Home</a></li>
-    {% for m in menu %}
-    {% if not forloop.last %}
-    <li>
-    {% else %}
-    <li class="last">
-    {% endif %}
-    <a href="{% url m.url_name %}">{{ m.title }}</a>
-    </li>
-    {% endfor %}
-   </ul>
-   <h1>{{ title|upper}}</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>{{ title }}</h1>
+
+{% include 'women/includes/nav.html' only with title2='You' %}
 
    <ul>
     {% for p in posts %}
@@ -35,5 +19,5 @@
     {% endif %}
     {% endfor %}
    </ul>
-</body>
-</html>
+{% include 'women/includes/nav.html' %}
+{% endblock %}
