--- a/sitewomen/women/templates/women/index.html
+++ b/sitewomen/women/templates/women/index.html
@@ -1,23 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-
-{% include 'women/includes/nav.html' only with title2='You' %}
-
-   <ul>
-    {% for p in posts %}
-    {% if p.is_published %}
-    <li>
-        <h2>{{ p.title }}</h2>
-        <p>{{ p.content }}</p>
-        <p><a href="{% url 'post' p.id %}">Show post</a></p>
-        {% if not forloop.last %}
-        <hr>
-        {% endif %}
-    </li>
-    {% endif %}
-    {% endfor %}
-   </ul>
-{% include 'women/includes/nav.html' %}
+<ul class="list-articles">
+	{% for p in posts %}
+	{% if p.is_published %}
+			<li><h2>{{p.title}}</h2>
+    {% autoescape off %}
+	{{p.content|linebreaks|truncatewords:40}}
+    {% endautoescape %}
+			<div class="clear"></div>
+			<p class="link-read-post"><a href="{% url 'post' p.id %}">Read post</a></p>
+			</li>
+	{% endif %}
+	{% endfor %}
+</ul>
 {% endblock %}
