--- a/sitewomen/templates/base.html
+++ b/sitewomen/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load women_tags %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,10 +31,14 @@
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
+		{% if cat_selected == 0 or cat_selected is None%}
 		<li class="selected">All categories</li>
-		<li><a href="#">Actresses</a></li>
-		<li><a href="#">Singers</a></li>
-		<li><a href="#">Sportswoman</a></li>
+		{% else %}
+		<li><a href="{% url 'home' %}">All categories</a></li>
+		{% endif %}
+
+		{% show_categories cat_selected %}
+		
 		<li class="share">
 		<p>Our channel</p>
 		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
